--- a/src/app/airline/airline.component.html
+++ b/src/app/airline/airline.component.html
@@ -1,19 +1,14 @@
 <div class="wrapper" *ngIf="dataSource">
-    <h1> Airlines </h1>
+    <h1>Airlines</h1>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-        <!--- Note that these columns can be defined in any order.
-        The actual rendered columns are set as a property on the row definition" -->
-
-        <!-- Position Column -->
         <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef>
+            <th mat-header-cell *matHeaderCellDef class="hide-780">
                 <i class="fa-solid fa-hashtag"></i> ID
             </th>
-            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+            <td mat-cell *matCellDef="let element" class="hide-780"> {{element.id}} </td>
         </ng-container>
 
-        <!-- Name Column -->
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef>
                 <i class="fa-solid fa-tag"></i> Name
@@ -21,7 +16,6 @@
             <td mat-cell *matCellDef="let element"> {{element.name}} </td>
         </ng-container>
 
-        <!-- Weight Column -->
         <ng-container matColumnDef="countryOfOrigin">
             <th mat-header-cell *matHeaderCellDef>
                 <i class="fa-solid fa-flag"></i> Country
@@ -29,21 +23,22 @@
             <td mat-cell *matCellDef="let element"> {{element.countryOfOrigin}} </td>
         </ng-container>
 
-        <!-- Symbol Column -->
         <ng-container matColumnDef="website">
-            <th mat-header-cell *matHeaderCellDef>
+            <th mat-header-cell *matHeaderCellDef class="hide-600">
                 <i class="fa-solid fa-globe"></i> Website
             </th>
-            <td mat-cell *matCellDef="let element"> {{element.website}} </td>
+            <td mat-cell *matCellDef="let element" class="hide-600">
+                {{element.website}}
+            </td>
         </ng-container>
 
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef>
-                <i class="fa-solid fa-filter"></i> Actions
+                <i class="fa-solid fa-location-arrow"></i> Actions
             </th>
             <td mat-cell *matCellDef="let element">
                 <a mat-button [href]="element.website" target="_blank">
-                    <i class="fa-solid fa-arrow-up-right-from-square"></i> Visite Website
+                    <i class="fa-solid fa-arrow-up-right-from-square"></i> Visit Website
                 </a>
             </td>
         </ng-container>
