--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,13 @@
-
 html,
 body {
     height: 100%;
-    background-color: #757575;
-    color: black;
+    background-color: #1e2124;
+    color: white;
+}
+
+.bg-dark {
+    background-color: #1e2124;
+    color: white;
 }
 
 a {
@@ -19,25 +23,63 @@ body {
     margin-top: 30px;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 10px;
 }
 
-.example-card {
+.flight-card {
     max-width: 400px;
 }
 
-.loading{
-    width: 700px;
+.loading {
     text-align: center;
+    width: 600px;
+    height: 300px;
     align-items: center;
 }
 
-.wrapper{
+.wrapper {
+    margin-top: 30px;
     max-width: 80%;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 30px;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+.auth-card {
+    margin-top: 30px;
+    max-width: 540px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.full-width {
+    width: 100%;
+}
+
+.cyan {
+    color: #00dddd
+}
+
+.link-name {
+    padding-left: 3px;
+}
+
+@media only screen and (max-width: 800px) {
+    .wrapper {
+        max-width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media only screen and (max-width: 780px) {
+    .hide-780 {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .hide-600 {
+        display: none;
+    }
+}
