--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-    <span><i class="fa-solid fa-location-dot"></i> iTravel</span>
+    <span><i class="fa-solid fa-film"></i> Bioskop</span>
     <span class="spacer"></span>
     <a routerLink="/" mat-button>
         <i class="fa-solid fa-house"></i>
