--- a/src/app/loading/loading.component.html
+++ b/src/app/loading/loading.component.html
@@ -1,9 +1,9 @@
 <div class="container">
     <mat-card class="loading" appearance="outlined">
-        <img mat-card-image src="/assets/loading.svg" width="100">
+        <img mat-card-image src="/assets/loadingGif.gif" width="150" height="100">
         <mat-card-content>
-            <h1>Please wait!</h1>
-            <p>We are processing your data...</p>
+            <h1>Sačekajte</h1>
+            <p>Učitavamo Vaše podatke...</p>
         </mat-card-content>
     </mat-card>
 </div>
