--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <mat-card class="auth-card">
     <mat-card-header>
-        <h1>Please login</h1>
+        <h1>Prijavite se</h1>
     </mat-card-header>
     <mat-card-content>
         <mat-form-field class="full-width">
@@ -14,10 +14,10 @@
     </mat-card-content>
     <mat-card-actions>
         <button type="button" mat-button (click)="doLogin()">
-            <i class="fa-solid fa-right-to-bracket"></i> Login now
+            <i class="fa-solid fa-right-to-bracket"></i> Prijava
         </button>
         <a mat-button routerLink="/signup">
-            <i class="fa-solid fa-arrow-up-right-from-square"></i> Create an account
+            <i class="fa-solid fa-arrow-up-right-from-square"></i> Registrujte se
         </a>
     </mat-card-actions>
 </mat-card>
