--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -5,8 +5,8 @@
             <img mat-card-avatar class="example-header-image" [src]="['https://ui-avatars.com/api/?name='+user.email]">
             <mat-card-title>{{user.firstName}} {{user.lastName}}</mat-card-title>
             <mat-card-subtitle>
-                <p class="no-border">Total orders: {{user.orders.length}}</p>
-                <p class="no-border">Destination: {{user.favouriteDestination}}</p>
+                <p class="no-border">Rezervacije: {{user.orders.length}}</p>
+                <!--<p class="no-border">Destination: {{user.favouriteDestination}}</p>-->
             </mat-card-subtitle>
         </mat-card-header>
         <mat-card-content class="user-card-content">
@@ -14,29 +14,29 @@
                 <mat-expansion-panel>
                     <mat-expansion-panel-header>
                         <mat-panel-title>
-                            <i class="fa-solid fa-key"></i>&nbsp;Change Password
+                            <i class="fa-solid fa-key"></i>&nbsp;Promeni lozinku
                         </mat-panel-title>
                     </mat-expansion-panel-header>
                     <mat-form-field class="full-width">
-                        <mat-label>Old password</mat-label>
+                        <mat-label>Stara lozinka</mat-label>
                         <input matInput type="password" [(ngModel)]="oldPasswordValue" />
                     </mat-form-field>
                     <mat-form-field class="full-width">
-                        <mat-label>New password</mat-label>
+                        <mat-label>Nova lozinka</mat-label>
                         <input matInput type="password" [(ngModel)]="newPasswordValue" />
                     </mat-form-field>
                     <mat-form-field class="full-width">
-                        <mat-label>Repeat password</mat-label>
+                        <mat-label>Ponovi novu lozinku</mat-label>
                         <input matInput type="password" [(ngModel)]="repeatPasswordValue" />
                     </mat-form-field>
                     <button mat-button (click)="doChangePassword()">
-                        <i class="fa-solid fa-paper-plane"></i> Sumbit
+                        <i class="fa-solid fa-paper-plane"></i> Potvrdi
                     </button>
                 </mat-expansion-panel>
                 <mat-expansion-panel *ngIf="userCopy">
                     <mat-expansion-panel-header>
                         <mat-panel-title>
-                            <i class="fa-solid fa-user-tag"></i>&nbsp;Update profile
+                            <i class="fa-solid fa-user-tag"></i>&nbsp;Promeni profil
                         </mat-panel-title>
                     </mat-expansion-panel-header>
                     <mat-form-field class="full-width">
@@ -44,31 +44,23 @@
                         <input matInput type="email" [(ngModel)]="userCopy.email" disabled />
                     </mat-form-field>
                     <mat-form-field class="full-width">
-                        <mat-label>First Name</mat-label>
+                        <mat-label>Ime</mat-label>
                         <input matInput type="text" [(ngModel)]="userCopy.firstName" />
                     </mat-form-field>
                     <mat-form-field class="full-width">
-                        <mat-label>Last Name</mat-label>
+                        <mat-label>Prezime</mat-label>
                         <input matInput type="text" [(ngModel)]="userCopy.lastName" />
                     </mat-form-field>
                     <mat-form-field class="full-width">
-                        <mat-label>Phone</mat-label>
+                        <mat-label>Telefon</mat-label>
                         <input matInput type="tel" [(ngModel)]="userCopy.phone" />
                     </mat-form-field>
                     <mat-form-field class="full-width">
-                        <mat-label>Address</mat-label>
+                        <mat-label>Adresa</mat-label>
                         <input matInput type="text" [(ngModel)]="userCopy.address" />
                     </mat-form-field>
-                    <mat-form-field class="full-width">
-                        <mat-label>Select Favourite Destination</mat-label>
-                        <mat-select [(ngModel)]="userCopy.favouriteDestination">
-                            <mat-option *ngFor="let dest of destinationList" [value]="dest">
-                                {{dest}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
                     <button mat-button (click)="doUpdateUser()">
-                        <i class="fa-solid fa-paper-plane"></i> Update
+                        <i class="fa-solid fa-paper-plane"></i> Promeni
                     </button>
                 </mat-expansion-panel>
             </mat-accordion>
@@ -77,115 +69,115 @@
 
     <mat-card appearance="outlined" *ngIf="user.orders.length == 0" class="no-order">
         <mat-card-content>
-            <h1>You have no orders yet!</h1>
-            <p>To place an order visit the <a routerLink="/searh" class="cyan">search page</a></p>
+            <h1>Nemate rezervacija!</h1>
+            <p>Kako biste napravili rezervaciju posetite <a routerLink="/searh" class="cyan"> početnu stranicu</a></p>
         </mat-card-content>
     </mat-card>
 
     <div *ngIf="user.orders.length > 0">
         <div *ngIf="user.orders">
-            <h1>Order List</h1>
+            <h1>Rezervacije:</h1>
             <table mat-table [dataSource]="user.orders" class="mat-elevation-z8">
 
-                <ng-container matColumnDef="id">
+                <ng-container matColumnDef="movieId">
                     <th mat-header-cell *matHeaderCellDef class="id">
-                        <i class="fa-solid fa-hashtag"></i> ID
+                        ID
                     </th>
-                    <td mat-cell *matCellDef="let element" class="id"> {{element.flightId}} </td>
+                    <td mat-cell *matCellDef="let element" class="id"> {{element.movieId}} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="destination">
+                <ng-container matColumnDef="title">
                     <th mat-header-cell *matHeaderCellDef>
-                        <i class="fa-solid fa-map-location-dot"></i> Destination
+                        Naziv
                     </th>
-                    <td mat-cell *matCellDef="let element"> {{element.destination}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.title}} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="flightNumber">
-                    <th mat-header-cell *matHeaderCellDef class="number">
-                        <i class="fa-solid fa-plane-circle-exclamation"></i> Flight Number
+                <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef class="name">
+                        Lokacija
                     </th>
-                    <td mat-cell *matCellDef="let element" class="number">
-                        {{element.flightNumber}}
+                    <td mat-cell *matCellDef="let element" class="name">
+                        {{element.name?.name}}
                     </td>
                 </ng-container>
 
-                <ng-container matColumnDef="airline">
+                <ng-container matColumnDef="shortDescription">
                     <th mat-header-cell *matHeaderCellDef class="airline">
-                        <i class="fa-solid fa-plane"></i> Airline
+                        Kratak opis
                     </th>
                     <td mat-cell *matCellDef="let element" class="airline">
-                        {{element.airline.name}}
+                        {{element.shortDescription}}
                     </td>
                 </ng-container>
 
                 <ng-container matColumnDef="count">
                     <th mat-header-cell *matHeaderCellDef class="count">
-                        <i class="fa-solid fa-arrow-up-wide-short"></i> Count
+                         Broj karata
                     </th>
                     <td mat-cell *matCellDef="let element" class="count">
                         {{element.count}}
                     </td>
                 </ng-container>
 
-                <ng-container matColumnDef="price">
+                <ng-container matColumnDef="pricePerItem">
                     <th mat-header-cell *matHeaderCellDef class="price">
-                        <i class="fa-solid fa-tag"></i> Price Per Ticket
+                        Cena karte
                     </th>
                     <td mat-cell *matCellDef="let element" class="price">
-                        {{element.pricePerItem}} <i class="fa-solid fa-euro-sign"></i>
+                        {{element.pricePerItem}}rsd
                     </td>
                 </ng-container>
 
                 <ng-container matColumnDef="total">
                     <th mat-header-cell *matHeaderCellDef class="total">
-                        <i class="fa-solid fa-hand-holding-dollar"></i> Total
+                        Ukupan iznos
                     </th>
                     <td mat-cell *matCellDef="let element" class="total">
-                        {{element.pricePerItem*element.count}} <i class="fa-solid fa-euro-sign"></i>
+                        {{element.pricePerItem*element.count}}rsd
                     </td>
                 </ng-container>
 
                 <ng-container matColumnDef="status">
                     <th mat-header-cell *matHeaderCellDef>
-                        <i class="fa-regular fa-chart-bar"></i> Status
+                        Status
                     </th>
                     <td mat-cell *matCellDef="let element">
                         <div *ngIf="element.status == 'paid' && element.rating == null">
-                            Paid
+                            Plaćeno
                         </div>
                         <div *ngIf="element.status == 'paid' && element.rating == true">
-                            Liked
+                            Svidjanje
                         </div>
                         <div *ngIf="element.status == 'paid' && element.rating == false">
-                            Disliked
+                            Nesvidjanje
                         </div>
                         <div *ngIf="element.status == 'ordered'">
-                            Ordered
+                            Naručeno
                         </div>
                         <div *ngIf="element.status == 'canceled'">
-                            Canceled
+                            Otkazano
                         </div>
                     </td>
                 </ng-container>
 
                 <ng-container matColumnDef="actions">
                     <th mat-header-cell *matHeaderCellDef>
-                        <i class="fa-solid fa-location-arrow"></i> Actions
+                        Actions
                     </th>
                     <td mat-cell *matCellDef="let element" class="actions">
-                        <a mat-button [routerLink]="['/details/', element.flightId]">
+                        <a mat-button [routerLink]="['/details/', element.movieId]">
                             <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                            <span class="link-name">Details</span>
+                            <span class="link-name">Detalji</span>
                         </a>
                         <div *ngIf="element.status == 'ordered'">
                             <button type="button" mat-button (click)="doPay(element)">
                                 <i class="fa-solid fa-cart-shopping"></i>
-                                <span class="link-name">Pay</span>
+                                <span class="link-name">Plati</span>
                             </button>
                             <button type="button" mat-button (click)="doCancel(element)">
                                 <i class="fa-solid fa-ban"></i>
-                                <span class="link-name">Cancel</span>
+                                <span class="link-name">Otkaži</span>
                             </button>
                         </div>
                         <div *ngIf="element.status == 'paid' && element.rating == null">
