--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,31 +3,31 @@
     <span class="spacer"></span>
     <a routerLink="/" mat-button>
         <i class="fa-solid fa-house"></i>
-        <span class="link-name">Home</span>
+        <span class="link-name">Početna</span>
     </a>
     <a routerLink="/search" mat-button>
         <i class="fa-solid fa-search"></i>
-        <span class="link-name">Search</span>
+        <span class="link-name">Pretraga</span>
     </a>
-    <a routerLink="/airlines" mat-button>
-        <i class="fa-solid fa-plane"></i>
-        <span class="link-name">Airlines</span>
+    <a routerLink="/cinema" mat-button>
+        <i class="fa-solid fa-masks-theater"></i>
+        <span class="link-name">Bioskopi</span>
     </a>
     <a routerLink="/login" mat-button *ngIf="!service.getActiveUser()">
         <i class="fa-solid fa-right-to-bracket"></i>
-        <span class="link-name">Login</span>
+        <span class="link-name">Prijava</span>
     </a>
     <a routerLink="/user" mat-button *ngIf="service.getActiveUser()">
         <i class="fa-solid fa-user"></i>
-        <span class="link-name">Profile</span>
+        <span class="link-name">Profil</span>
     </a>
     <button mat-button *ngIf="service.getActiveUser()" (click)="doLogout()">
         <i class="fa-solid fa-right-from-bracket"></i>
-        <span class="link-name">Logout</span>
+        <span class="link-name">Odjava</span>
     </button>
     <a routerLink="/about" mat-button class="about-btn">
         <i class="fa-solid fa-circle-info"></i>
-        <span class="link-name">About</span>
+        <span class="link-name">Više</span>
     </a>
 </mat-toolbar>
 
