--- a/src/app/cinema/cinema.component.html
+++ b/src/app/cinema/cinema.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper" *ngIf="dataSource">
-    <h1>Airlines</h1>
+    <h1>Bioskopi</h1>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
         <ng-container matColumnDef="id">
@@ -11,21 +11,21 @@
 
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef>
-                <i class="fa-solid fa-tag"></i> Name
+                <i class="fa-solid fa-tag"></i> Naziv
             </th>
             <td mat-cell *matCellDef="let element"> {{element.name}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="countryOfOrigin">
+        <ng-container matColumnDef="city">
             <th mat-header-cell *matHeaderCellDef>
-                <i class="fa-solid fa-flag"></i> Country
+                <i class="fa-solid fa-flag"></i> Grad
             </th>
-            <td mat-cell *matCellDef="let element"> {{element.countryOfOrigin}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.city}} </td>
         </ng-container>
 
         <ng-container matColumnDef="website">
             <th mat-header-cell *matHeaderCellDef class="hide-600">
-                <i class="fa-solid fa-globe"></i> Website
+                <i class="fa-solid fa-globe"></i> Sajt
             </th>
             <td mat-cell *matCellDef="let element" class="hide-600">
                 {{element.website}}
@@ -34,11 +34,11 @@
 
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef>
-                <i class="fa-solid fa-location-arrow"></i> Actions
+                <i class="fa-solid fa-location-arrow"></i> Linkovi sajtova
             </th>
             <td mat-cell *matCellDef="let element">
                 <a mat-button [href]="element.website" target="_blank">
-                    <i class="fa-solid fa-arrow-up-right-from-square"></i> Visit Website
+                    <i class="fa-solid fa-arrow-up-right-from-square"></i> Poseti sajt
                 </a>
             </td>
         </ng-container>
