--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,35 +1,35 @@
 <div class="wrapper" *ngIf="dataSource">
-    <h1>Search</h1>
+    <h1>Pretraga</h1>
     <mat-card class="search-card">
         <mat-card-content>
             <div class="search-input-row">
                 <mat-form-field class="search-input">
-                    <mat-label>Search</mat-label>
-                    <input type="text" matInput placeholder="Enter search criteria" (keyup)="doFilterChain()"
-                        [(ngModel)]="userInput">
+                    <mat-label>Izaberi naslov:</mat-label>
+                    <mat-select (selectionChange)="doFilterChain()" [(ngModel)]="selectedTitle">
+                        <mat-option *ngFor="let title of titleList" [value]="title">
+                            {{title}}
+                        </mat-option>
+                    </mat-select>
                 </mat-form-field>
                 <mat-form-field class="search-input">
-                    <mat-label>Select Destination</mat-label>
-                    <mat-select (selectionChange)="doFilterChain()" [(ngModel)]="selectedDestination">
-                        <mat-option *ngFor="let dest of destinationList" [value]="dest">
-                            {{dest}}
+                    <mat-label>Izaberi žanr:</mat-label>
+                    <mat-select (selectionChange)="doFilterChain()" [(ngModel)]="selectedGenre">
+                        <mat-option *ngFor="let genre of genreList" [value]="genre">
+                            {{genre}}
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
             </div>
             <div class="search-input-row">
                 <mat-form-field class="search-input">
-                    <mat-label>Select Flight Number</mat-label>
-                    <mat-select (selectionChange)="doFilterChain()" [(ngModel)]="selectedFlightNumber">
-                        <mat-option *ngFor="let fn of flightNumberList" [value]="fn">
-                            {{fn}}
-                        </mat-option>
-                    </mat-select>
+                    <mat-label>Pretraga u opisu:</mat-label>
+                    <input matInput placeholder="Pretraga po kratkom opisu" [(ngModel)]="userInput"
+                        (keyup)="doFilterChain()">
                 </mat-form-field>
                 <mat-form-field class="search-input">
-                    <mat-label>Select Date</mat-label>
+                    <mat-label>Izaberi Datum</mat-label>
                     <mat-select (selectionChange)="doFilterChain()" [(ngModel)]="selectedDate">
-                        <mat-option *ngFor="let date of dateOptions" [value]="date">
+                        <mat-option *ngFor="let date of dateList" [value]="date">
                             {{date}}
                         </mat-option>
                     </mat-select>
@@ -38,56 +38,45 @@
         </mat-card-content>
         <mat-card-actions>
             <button mat-button (click)="doReset()">
-                <i class="fa-solid fa-ban"></i> Reset all search criteria
+                <i class="fa-solid fa-ban"></i> Resetuj filter pretrage
             </button>
         </mat-card-actions>
     </mat-card>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-        <ng-container matColumnDef="id">
+        <ng-container matColumnDef="movieId">
             <th mat-header-cell *matHeaderCellDef class="hide-780">
-                <i class="fa-solid fa-hashtag"></i> ID
+                 Id
             </th>
-            <td mat-cell *matCellDef="let element" class="hide-780"> {{element.id}} </td>
+            <td mat-cell *matCellDef="let element" class="hide-780"> {{element.movieId}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="destination">
+        <ng-container matColumnDef="title">
             <th mat-header-cell *matHeaderCellDef>
-                <i class="fa-solid fa-map-location-dot"></i> Destination
+                 Naslov
             </th>
-            <td mat-cell *matCellDef="let element"> {{element.destination}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.title}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="flightNumber">
+        <ng-container matColumnDef="startDate">
             <th mat-header-cell *matHeaderCellDef>
-                <i class="fa-solid fa-plane-circle-exclamation"></i> Flight Number
+                 Datum
             </th>
-            <td mat-cell *matCellDef="let element"> {{element.flightNumber}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.startDate}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="scheduledAt">
-            <th mat-header-cell *matHeaderCellDef class="hide-600">
-                <i class="fa-solid fa-clock-rotate-left"></i> Scheduled At
-            </th>
-            <td mat-cell *matCellDef="let element" class="hide-600">
-                {{utils.formatDate(element.estimatedAt?element.estimatedAt:element.scheduledAt)}}
-            </td>
-        </ng-container>
-
-        <ng-container matColumnDef="actions">
+        <ng-container matColumnDef="shortDescription">
             <th mat-header-cell *matHeaderCellDef>
-                <i class="fa-solid fa-location-arrow"></i> Actions
+                 Kratak opis
             </th>
-            <td mat-cell *matCellDef="let element">
-                <a mat-button [routerLink]="['/details/', element.id]">
-                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
-                    <span class="link-name hide-780">Details</span>
-                </a>
-                <a mat-button [routerLink]="['/details/'+element.id+'/order']">
-                    <i class="fa-solid fa-cart-shopping"></i>
-                    <span class="link-name hide-780">Book Now</span>
-                </a>
-            </td>
+            <td mat-cell *matCellDef="let element"> {{element.shortDescription}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="movieGenres">
+            <th mat-header-cell *matHeaderCellDef>
+                 Žanr
+            </th>
+            <td mat-cell *matCellDef="let element"> {{formatGenres(element)}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
