--- a/src/app/loading/loading.component.html
+++ b/src/app/loading/loading.component.html
@@ -2,7 +2,7 @@
     <mat-card class="loading" appearance="outlined">
         <img mat-card-image src="/assets/loadingGif.gif" width="150" height="100">
         <mat-card-content>
-            <h1>Sačekajte</h1>
+            <h1>Sačekajte!</h1>
             <p>Učitavamo Vaše podatke...</p>
         </mat-card-content>
     </mat-card>
