--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,11 +5,11 @@
     <mat-card-content>
         <mat-form-field class="full-width">
             <mat-label>Email</mat-label>
-            <input type="email" matInput placeholder="Input your email..." [(ngModel)]="email">
+            <input type="email" matInput placeholder="Upišite Vaš email..." [(ngModel)]="email">
         </mat-form-field>
         <mat-form-field class="full-width">
-            <mat-label>Password</mat-label>
-            <input id="password" type="password" matInput placeholder="Input your password..." [(ngModel)]="password">
+            <mat-label>Lozinka</mat-label>
+            <input id="password" type="password" matInput placeholder="Upišite Vašu lozinku..." [(ngModel)]="password">
         </mat-form-field>
     </mat-card-content>
     <mat-card-actions>
