--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -5,31 +5,31 @@
     <mat-card-content>
         <mat-form-field class="full-width">
             <mat-label>Email</mat-label>
-            <input type="email" matInput placeholder="Input your email..." [(ngModel)]="email">
+            <input type="email" matInput placeholder="Upišite Vaš email..." [(ngModel)]="email">
         </mat-form-field>
         <mat-form-field class="full-width">
             <mat-label>Ime</mat-label>
-            <input type="text" matInput placeholder="Input your name..." [(ngModel)]="firstName">
+            <input type="text" matInput placeholder="Upišite Vaše ime..." [(ngModel)]="firstName">
         </mat-form-field>
         <mat-form-field class="full-width">
             <mat-label>Prezime</mat-label>
-            <input type="text" matInput placeholder="Input your surname..." [(ngModel)]="lastName">
+            <input type="text" matInput placeholder="Upišite Vaše prezime..." [(ngModel)]="lastName">
         </mat-form-field>
         <mat-form-field class="full-width">
             <mat-label>Broj telefona</mat-label>
-            <input type="tel" matInput placeholder="Input your phone..." [(ngModel)]="phone">
+            <input type="tel" matInput placeholder="Upišite Vaš broj telefona..." [(ngModel)]="phone">
         </mat-form-field>
         <mat-form-field class="full-width">
             <mat-label>Adresa</mat-label>
-            <input type="text" matInput placeholder="Input your address..." [(ngModel)]="address">
+            <input type="text" matInput placeholder="Upišite Vašu adresu..." [(ngModel)]="address">
         </mat-form-field>
         <mat-form-field class="full-width">
-            <mat-label>Password</mat-label>
-            <input type="password" matInput placeholder="Input your password..." [(ngModel)]="password">
+            <mat-label>Lozinka</mat-label>
+            <input type="password" matInput placeholder="Upišite Vašu lozinku..." [(ngModel)]="password">
         </mat-form-field>
         <mat-form-field class="full-width">
-            <mat-label>Ponovite Password</mat-label>
-            <input type="password" matInput placeholder="Repeat your password..." [(ngModel)]="repeatPassword">
+            <mat-label>Ponovite lozinku</mat-label>
+            <input type="password" matInput placeholder="Ponovite Vašu lozinku..." [(ngModel)]="repeatPassword">
         </mat-form-field>
     </mat-card-content>
     <mat-card-actions>
